--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ label {
   color: #444;
 }
 
-input, textarea {
+input, textarea, select {
   width: 100%;
   padding: 10px;
   border: 1px solid #ccc;
